# project2

./: .gitignore  CHANGELOG.md  README.md  RESUBMISSION_NOTE.md  SUBMISSION_CHECKLIST.md  Zetheta_Project_1B_FINAL_FULL_DOCUMENT.html  Zetheta_Project_1B_POLISHED_REPORT.html  Zetheta_Project_1B_Submission_Document.html  pyproject.toml  submission_single_file.html
api/: API_FinSight_Destination.yaml  API_SAP_Source.yaml
data/sample/: sap_gl_entries.csv
diagrams/: DGM_C4_Container.mmd  DGM_C4_SystemContext.mmd  DGM_DataFlow_Reconciliation.mmd  DGM_Sequence_ErrorDLQ.mmd  DGM_Sequence_HappyPath.mmd
docs/: D0_Requirements_v1.md  D1_Integration_Architecture_v1.md  D2_API_Specification_v1.md  D4_Error_Handling_Framework_v1.md  D5_Reconciliation_Specification_v1.md  D8_Stakeholder_Communication_v1.md  D9_Runnable_Prototype_v1.md
mappings/: MAP_Finance_AllDomains_v1.md
monitoring/: D6_Monitoring_Dashboard_v1.md
outputs/: dlq_records.json  finsight_gl_batch.json  load_result.json  reconciliation_report.json
postman/: FDE9B_Postman_Collection.json
src/sap_finsight_integration/: __init__.py  cli.py  config.py  extract.py  load.py  pipeline.py  reconcile.py  transform.py
tests/: D7_Integration_Test_Plan_v1.md  test_pipeline.py  test_pipeline_unittest.py
tools/: build-final-full-document.ps1  build-polished-report.ps1  build-single-html.ps1  build-submission-document.ps1
